[gd_scene load_steps=2 format=3 uid="uid://baxxpbcvp0jn1"]

[ext_resource type="Script" path="res://scenes/popups/scraping_game_picker/ScrapingGamePickerPopup.gd" id="1"]

[node name="ScrapingGamePickerPopup" type="ConfirmationDialog"]
position = Vector2i(0, 24)
size = Vector2i(600, 491)
visible = true
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
clip_contents = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = 592.0
offset_bottom = 443.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Select the games you wish to scrape:"

[node name="GameTree" type="Tree" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
columns = 2
column_titles_visible = true
scroll_horizontal_enabled = false

[connection signal="about_to_popup" from="." to="." method="_on_ScrapingGamePickerPopup_about_to_show"]
[connection signal="confirmed" from="." to="." method="_on_ScrapingGamePickerPopup_confirmed"]
[connection signal="item_activated" from="VBoxContainer/GameTree" to="." method="_on_GameTree_item_activated"]
[connection signal="item_edited" from="VBoxContainer/GameTree" to="." method="_on_GameTree_item_edited"]
